--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,3 +27,4 @@ dependencies {
     compile 'com.firebase:geofire-android:2.1.0'
     compile 'com.google.firebase:firebase-database:9.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
