--- a/client/build.gradle
+++ b/client/build.gradle
@@ -23,8 +23,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.google.firebase:firebase-core:9.0.2'
+
+    compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.firebase:geofire-android:2.1.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
+
+    compile 'com.google.android.gms:play-services-location:9.4.0'
+    compile 'com.google.android.gms:play-services-maps:9.4.0'
 }
 apply plugin: 'com.google.gms.google-services'
